welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:7: error: expected class or object definition
 def fairev() {gauche();avance();marque();recule();droite();avance();marque();avance();gauche();avance();marque();recule()droite();}
 ^PictureMono:10: error: Unmatched closing brace '}' ignored here
}
^